Set the canvas to display none to prevent mobile horizontal scrolling

--- a/styles.css
+++ b/styles.css
@@ -91,7 +91,7 @@ canvas.sampler {
   left: 0;
   pointer-events: none;
   z-index: -1;
-  visibility: hidden;
+  display: none;
 }
 
 .swatches.over > div{
